--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,11 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Install dependencies
-        run: |
-          sudo apt-get -y install --no-install-recommends \
-            shellcheck
+        uses: actions/checkout@v5
       - name: Run ShellCheck
-        run: |
-          shellcheck create-iso.sh
+        run: shellcheck *.sh
